--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.google.com/specimen/Poppins?selection.family=Open+Sans|Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900");
 
-body,section,ul,li,img,a {
+body,section,ul,li,img,a,p,h2 {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -9,6 +9,7 @@ body,section,ul,li,img,a {
 ul,li{
   list-style: none;
 }
+a{text-decoration: none;color: #fff;}
 
 body {
   overflow: hidden;
@@ -16,9 +17,9 @@ body {
 
 section {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
-  min-height: 100vw;
+  min-height: 100vh;
   background: linear-gradient(to bottom, #f1f4f9, #dff1ff);
 }
 
@@ -29,9 +30,10 @@ section .color {
 
 section .color:nth-child(1) {
   top: -350px;
+  right: -100px;
   width: 600px;
   height: 600px;
-  background: #ff369b;
+  background: #F28DA8;
 }
 
 section .color:nth-child(2) {
@@ -39,7 +41,7 @@ section .color:nth-child(2) {
   left: 100px;
   width: 500px;
   height: 500px;
-  background: #ff369b;
+  background: #ace0f9;
 }
 
 section .color:nth-child(3) {
@@ -47,7 +49,7 @@ section .color:nth-child(3) {
   left: 100px;
   width: 300px;
   height: 300px;
-  background: #00d2ff;
+  background: #D8D9D0;
 }
 
 .box {
@@ -114,9 +116,10 @@ section .color:nth-child(3) {
 }
 
 .container {
+  color: #fff;
   position: relative;
-  width: 400px;
-  min-height: 400px;
+  width: 700px;
+  min-height: 300px;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
   display: flex;
@@ -128,26 +131,118 @@ section .color:nth-child(3) {
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-right: 1px solid rgba(255, 255, 255, 0.2);
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  padding: 30px;
+}
+.container h2{
+  font-size: 1.5em;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: #333;
+  line-height: 1.5em;
+}
+.container p{
+  font-size: 1em;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+
+.container .description{
+  font-size: 1.3em;
+  margin: 20px;
+}
+
+.container .head{
+  position: relative;
+}
+.container .head .header{
+  width: 80px;
+  height: 80px;
+  border: 3px solid white;
+  border-radius: 50%;
+  padding: 2px;
+}
+.container .status{
+  position: absolute;
+  top: 18px;
+  right: -80px;
+  width: 70px;
+  height: 50px;
+  line-height: 50px;
+  box-shadow: 0 25px 45px rgb(0 0 0 / 10%);border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  animation: pulse 2s linear infinite;
+overflow: hidden;
+}
+.container .status .subtitle{
+  width: 100%;
+  position: absolute;
+  text-align: center;
+  animation: moveup 8s 1s infinite;
+}
+.subtitle p{
+    background: linear-gradient(to right, red, blue);
+    color: transparent;
+  -webkit-background-clip: text;
+
+}
+ 
+@keyframes pulse{
+  50%{
+    transform: scale(1.1);
+  }
+}
+
+@keyframes moveup {
+   0% {
+ top: 0px;
+ }
+ 33% {
+ top: -50px;
+ }
+ 66% {
+  top:-100px;
+ }
+100% {
+  top: -150px;
+ }
+
 }
 
 .contactWay {padding: 10px;display: flex}
 
-.contactWay li{
-    width: 100%;
+.contactWay li{text-align: center;}
+.contactWay li img{
+  width: 3.4em;
+  height: 3.4em;
   background: rgba(255, 255, 255, 0.2);
-  padding: 10px;
+  padding: 6px;
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-right: 1px solid rgba(255, 255, 255, 0.2);
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
-  margin: 0 5px;
+  margin: 0 15px;
+  text-align: center;
 }
 
-.contactWay img{
-  width: 60px;
-  height: 60px;
+
+.contactWay .wechat{
+  position: relative;
 }
+
+#wechatQR{
+  position: absolute;
+  top: 65px;
+  left: 0;
+  width: 150px;
+  height: 150px;
+  display: none;
+}
+.contactWay .wechat:hover #wechatQR{
+  display: block;
+}
+
+
 
 
 
